// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTabbedContent behavior when selected tab state isn't controlled by the owner, select the first tab by default 1`] = `
<div>
  <div
    class="euiTabs euiTabs--bottomBorder"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="euiTab euiTab-isSelected"
      id="es"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__content"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="euiTab kibanaTab"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__prepend"
      >
        prepend
      </span>
      <span
        class="euiTab__content"
      >
        <strong>
          Kibana
        </strong>
      </span>
      <span
        class="euiTab__append"
      >
        append
      </span>
    </button>
  </div>
  <div
    aria-labelledby="es"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Elasticsearch content
    </p>
  </div>
</div>
`;

exports[`EuiTabbedContent behavior when uncontrolled, the selected tab should update if it receives new content 1`] = `
<EuiTabbedContent
  autoFocus="initial"
  tabs={
    Array [
      Object {
        "content": <p>
          Elasticsearch content
        </p>,
        "id": "es",
        "name": "Elasticsearch",
      },
      Object {
        "append": "append",
        "className": "kibanaTab",
        "content": <p>
          updated Kibana content
        </p>,
        "data-test-subj": "kibanaTab",
        "id": "kibana",
        "name": <strong>
          Kibana
        </strong>,
        "prepend": "prepend",
      },
    ]
  }
>
  <div>
    <EuiTabs
      onFocus={[Function]}
    >
      <div
        className="euiTabs euiTabs--bottomBorder"
        onFocus={[Function]}
        role="tablist"
      >
        <EuiTab
          aria-controls="generated-id"
          id="es"
          isSelected={false}
          key="es"
          onClick={[Function]}
        >
          <button
            aria-controls="generated-id"
            aria-selected={false}
            className="euiTab"
            disabled={false}
            id="es"
            onClick={[Function]}
            role="tab"
            type="button"
          >
            <span
              className="euiTab__content"
            >
              Elasticsearch
            </span>
          </button>
        </EuiTab>
        <EuiTab
          append="append"
          aria-controls="generated-id"
          className="kibanaTab"
          data-test-subj="kibanaTab"
          id="kibana"
          isSelected={true}
          key="kibana"
          onClick={[Function]}
          prepend="prepend"
        >
          <button
            aria-controls="generated-id"
            aria-selected={true}
            className="euiTab kibanaTab euiTab-isSelected"
            data-test-subj="kibanaTab"
            disabled={false}
            id="kibana"
            onClick={[Function]}
            role="tab"
            type="button"
          >
            <span
              className="euiTab__prepend"
            >
              prepend
            </span>
            <span
              className="euiTab__content"
            >
              <strong>
                Kibana
              </strong>
            </span>
            <span
              className="euiTab__append"
            >
              append
            </span>
          </button>
        </EuiTab>
      </div>
    </EuiTabs>
    <div
      aria-labelledby="kibana"
      id="generated-id"
      role="tabpanel"
    >
      <p>
        updated Kibana content
      </p>
    </div>
  </div>
</EuiTabbedContent>
`;

exports[`EuiTabbedContent is rendered with required props and tabs 1`] = `
<div
  aria-label="aria-label"
  class="testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiTabs euiTabs--bottomBorder"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="euiTab euiTab-isSelected"
      id="es"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__content"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="euiTab kibanaTab"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__prepend"
      >
        prepend
      </span>
      <span
        class="euiTab__content"
      >
        <strong>
          Kibana
        </strong>
      </span>
      <span
        class="euiTab__append"
      >
        append
      </span>
    </button>
  </div>
  <div
    aria-labelledby="es"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Elasticsearch content
    </p>
  </div>
</div>
`;

exports[`EuiTabbedContent props autoFocus initial is rendered 1`] = `
<div>
  <div
    class="euiTabs euiTabs--bottomBorder"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="euiTab euiTab-isSelected"
      id="es"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__content"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="euiTab kibanaTab"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__prepend"
      >
        prepend
      </span>
      <span
        class="euiTab__content"
      >
        <strong>
          Kibana
        </strong>
      </span>
      <span
        class="euiTab__append"
      >
        append
      </span>
    </button>
  </div>
  <div
    aria-labelledby="es"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Elasticsearch content
    </p>
  </div>
</div>
`;

exports[`EuiTabbedContent props autoFocus selected is rendered 1`] = `
<div>
  <div
    class="euiTabs euiTabs--bottomBorder"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="euiTab euiTab-isSelected"
      id="es"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__content"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="euiTab kibanaTab"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__prepend"
      >
        prepend
      </span>
      <span
        class="euiTab__content"
      >
        <strong>
          Kibana
        </strong>
      </span>
      <span
        class="euiTab__append"
      >
        append
      </span>
    </button>
  </div>
  <div
    aria-labelledby="es"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Elasticsearch content
    </p>
  </div>
</div>
`;

exports[`EuiTabbedContent props display can be condensed 1`] = `
<div>
  <div
    class="euiTabs euiTabs--condensed"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="euiTab euiTab-isSelected"
      id="es"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__content"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="euiTab kibanaTab"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__prepend"
      >
        prepend
      </span>
      <span
        class="euiTab__content"
      >
        <strong>
          Kibana
        </strong>
      </span>
      <span
        class="euiTab__append"
      >
        append
      </span>
    </button>
  </div>
  <div
    aria-labelledby="es"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Elasticsearch content
    </p>
  </div>
</div>
`;

exports[`EuiTabbedContent props initialSelectedTab renders a selected tab 1`] = `
<div>
  <div
    class="euiTabs euiTabs--bottomBorder"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="euiTab"
      id="es"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__content"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="euiTab kibanaTab euiTab-isSelected"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__prepend"
      >
        prepend
      </span>
      <span
        class="euiTab__content"
      >
        <strong>
          Kibana
        </strong>
      </span>
      <span
        class="euiTab__append"
      >
        append
      </span>
    </button>
  </div>
  <div
    aria-labelledby="kibana"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Kibana content
    </p>
  </div>
</div>
`;

exports[`EuiTabbedContent props selectedTab renders a selected tab 1`] = `
<div>
  <div
    class="euiTabs euiTabs--bottomBorder"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="euiTab"
      id="es"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__content"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="euiTab kibanaTab euiTab-isSelected"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__prepend"
      >
        prepend
      </span>
      <span
        class="euiTab__content"
      >
        <strong>
          Kibana
        </strong>
      </span>
      <span
        class="euiTab__append"
      >
        append
      </span>
    </button>
  </div>
  <div
    aria-labelledby="kibana"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Kibana content
    </p>
  </div>
</div>
`;

exports[`EuiTabbedContent props size can be small 1`] = `
<div>
  <div
    class="euiTabs euiTabs--small euiTabs--bottomBorder"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="euiTab euiTab-isSelected"
      id="es"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__content"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="euiTab kibanaTab"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__prepend"
      >
        prepend
      </span>
      <span
        class="euiTab__content"
      >
        <strong>
          Kibana
        </strong>
      </span>
      <span
        class="euiTab__append"
      >
        append
      </span>
    </button>
  </div>
  <div
    aria-labelledby="es"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Elasticsearch content
    </p>
  </div>
</div>
`;
